tests/bad/12_non_var_passed_by_ref_9.ris
void add(ref int a, int b):
    a = a + b;
    return;

void main():
    add(4, 2);
    return;