tests/bad/12_non_var_passed_by_ref_9.err
Type error in line 6, column 5:
non-variable argument passed as reference to function add
